objects/ARM_Employee_Agreement_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>ARM_Authorized_Employee__c</fullName>
        <label>ARM Authorized Employee</label>
        <referenceTo>NDA_ARM_Cadence_Authorized_Employees__c</referenceTo>
        <relationshipLabel>ARM Authorized Employees</relationshipLabel>
        <relationshipName>ARM_Authorized_Employees_For_Agreement</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Access_Expiration_Date__c</fullName>
        <formula>ARM_Authorized_Employee__r.Access_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <formula>ARM_Authorized_Employee__r.User__r.FirstName + &apos; &apos; +  ARM_Authorized_Employee__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Access_Date__c</fullName>
        <formula>ARM_Authorized_Employee__r.Last_Access_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Never_Accessed__c</fullName>
        <formula>ARM_Authorized_Employee__r.Never_Accessed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Never Accessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>ARM Authorized Employees</relationshipLabel>
        <relationshipName>ARM_Authorized_Employees_For_Agreement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Update_Access_Date__c</fullName>
        <formula>ARM_Authorized_Employee__r.Update_Access_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Access Date</label>
        <type>Text</type>
    </fields>
    <label>ARM Employee Agreement Relationship</label>
    <nameField>
        <displayFormat>Employee {0000}</displayFormat>
        <label>Agreement ARM Employee Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARM Employee Agreement Relationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>